--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="104dp"
         android:background="@color/colorPrimary"
         android:paddingBottom="2dp"
-        android:text="@string/coffeeDetailsLbl"
+        android:text="@string/foodDetailsLbl"
         android:textAlignment="center"
         android:textColor="@color/colorFontWhite"
         android:textSize="18sp"
@@ -45,7 +45,7 @@
         android:layout_width="99dp"
         android:layout_height="43dp"
         android:paddingTop="10dp"
-        android:text="@string/coffeePriceLbl"
+        android:text="@string/foodPriceLbl"
         android:textAlignment="textEnd"
         android:textColor="@color/colorFontBlack"
         android:textSize="18sp"
@@ -61,7 +61,7 @@
         android:layout_width="99dp"
         android:layout_height="43dp"
         android:paddingTop="10dp"
-        android:text="@string/coffeeShopLbl"
+        android:text="@string/foodShopLbl"
         android:textAlignment="textEnd"
         android:textColor="@color/colorFontBlack"
         android:textSize="18sp"
@@ -77,7 +77,7 @@
         android:layout_width="99dp"
         android:layout_height="43dp"
         android:paddingTop="10dp"
-        android:text="@string/coffeeNameLbl"
+        android:text="@string/foodNameLbl"
         android:textAlignment="textEnd"
         android:textColor="@color/colorFontBlack"
         android:textSize="18sp"
@@ -160,7 +160,7 @@
         android:background="@color/colorFontOffWhite"
         android:drawableTop="@drawable/blue_add_48"
         android:onClick="saveFood"
-        android:text="@string/saveCoffeeBtn"
+        android:text="@string/saveFoodBtn"
         app:layout_constraintBottom_toTopOf="@+id/editfooter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
