--- a/app/src/main/res/menu/delete_list_context.xml
+++ b/app/src/main/res/menu/delete_list_context.xml
@@ -4,5 +4,5 @@
     <item
         android:id="@+id/menu_item_delete_food"
         android:icon="@android:drawable/ic_menu_delete"
-        android:title="@string/deleteCoffeesLbl" />
+        android:title="@string/deleteFoodLbl" />
 </menu>
