--- a/app/src/main/res/layout/add_fragment.xml
+++ b/app/src/main/res/layout/add_fragment.xml
@@ -58,7 +58,7 @@
         android:textColor="@color/colorFontBlack"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/editText"
+        app:layout_constraintEnd_toStartOf="@+id/addDateET"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -163,7 +163,7 @@
         android:id="@+id/addFoodButton"
         android:layout_width="80dp"
         android:layout_height="90dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="48dp"
         android:background="@color/colorFontOffWhite"
         android:drawableTop="@drawable/ic_add_box_yellow_24dp"
         android:elevation="5dp"
