--- a/app/src/main/res/layout/foodrow.xml
+++ b/app/src/main/res/layout/foodrow.xml
@@ -11,14 +11,14 @@
         android:layout_width="39dp"
         android:layout_height="39dp"
         android:layout_alignParentLeft="true"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="8dp"
         android:contentDescription="fav"
         android:gravity="center_vertical"
-        android:src="@drawable/favourites_72"
+        android:src="@drawable/ic_favorite_off"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.024"
+        app:layout_constraintHorizontal_bias="0.983"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,7 +32,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:contentDescription="fav"
-        android:src="@android:drawable/ic_delete"
+        android:src="@drawable/ic_delete_red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:layout_height="20dp"
         android:layout_alignTop="@+id/rowFavouriteImg"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:layout_toRightOf="@+id/rowFavouriteImg"
         android:gravity="center_vertical"
@@ -54,7 +54,7 @@
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.277"
+        app:layout_constraintHorizontal_bias="0.03"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -65,7 +65,7 @@
         android:layout_alignLeft="@+id/rowFoodName"
         android:layout_alignBottom="@+id/rowFavouriteImg"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:gravity="center_vertical"
         android:text="Takeaway Resturant"
@@ -74,18 +74,38 @@
         android:textSize="11sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.277"
+        app:layout_constraintHorizontal_bias="0.641"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/rowFoodDate"
+        android:layout_width="130dp"
+        android:layout_height="16dp"
+        android:layout_alignLeft="@+id/rowFoodName"
+        android:layout_alignBottom="@+id/rowFavouriteImg"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center_vertical"
+        android:text="Date "
+        android:textAlignment="viewStart"
+        android:textColor="@color/colorFontBlack"
+        android:textSize="11sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.641"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/rowRating"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="22dp"
         android:layout_alignBottom="@+id/rowDeleteImg"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
         android:layout_toLeftOf="@+id/rowDeleteImg"
         android:gravity="center_vertical"
         android:text="5.0 *"
@@ -94,7 +114,7 @@
         android:textSize="11sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.79"
+        app:layout_constraintHorizontal_bias="0.295"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -104,9 +124,9 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/rowRating"
         android:layout_alignTop="@+id/rowDeleteImg"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
         android:gravity="center_vertical"
         android:text="€3.99"
         android:textAlignment="viewStart"
@@ -114,7 +134,7 @@
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.819"
+        app:layout_constraintHorizontal_bias="0.022"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
