--- a/app/src/main/res/layout/add_fragment.xml
+++ b/app/src/main/res/layout/add_fragment.xml
@@ -181,7 +181,7 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Enter Date"
-        android:inputType="date"
+        android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
