--- a/app/src/main/res/layout/favourites.xml
+++ b/app/src/main/res/layout/favourites.xml
@@ -88,31 +88,42 @@
         app:layout_constraintTop_toBottomOf="@+id/favouriteFoodName" />
 
     <TextView
+        android:id="@+id/favouriteFoodDates"
+        android:layout_width="94dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="300dp"
+        android:layout_marginTop="20dp"
+        android:text="Date"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/favouriteFoodRating" />
+
+    <TextView
         android:id="@+id/favouriteFoodPrice"
         android:layout_width="94dp"
         android:layout_height="25dp"
-        android:layout_marginEnd="52dp"
         android:layout_marginTop="20dp"
-        android:text="price"
+        android:layout_marginEnd="144dp"
+        android:text="Price"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/favouriteFoodRating" />
+        app:layout_constraintTop_toBottomOf="@+id/favouriteFoodName" />
 
     <TextView
-        android:id="@+id/favouriteCoffeeRating"
+        android:id="@+id/favouriteFoodRating"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="56dp"
-        android:layout_marginTop="8dp"
         android:text="Rating"
         android:textAlignment="center"
-        android:textColor="@color/colorFontRed"
+        android:textColor="@color/colorFontBlack"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="308dp"
+        tools:layout_editor_absoluteY="4dp" />
 
 
 </android.support.constraint.ConstraintLayout>
