Layout of add restructuring started

--- a/app/src/main/res/layout/favourites.xml
+++ b/app/src/main/res/layout/favourites.xml
@@ -10,15 +10,16 @@
         android:id="@+id/favouriteBarTV"
         android:layout_width="0dp"
         android:layout_height="21dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="136dp"
+        android:layout_marginEnd="8dp"
         android:background="@color/colorPrimary"
         android:text="@string/recentlyViewedLbl"
         android:textAlignment="center"
         android:textColor="@color/colorFontWhite"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -67,7 +68,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="FoodName"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textColor="@color/colorFontBlack"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -78,52 +79,54 @@
         android:id="@+id/favouriteFoodShop"
         android:layout_width="94dp"
         android:layout_height="25dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="116dp"
         android:text="Resturant"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/favouriteFoodName" />
+        app:layout_constraintStart_toEndOf="@+id/favouriteFoodName"
+        tools:layout_editor_absoluteY="8dp" />
 
     <TextView
-        android:id="@+id/favouriteFoodDates"
+        android:id="@+id/favouriteFoodDate"
         android:layout_width="94dp"
         android:layout_height="25dp"
-        android:layout_marginStart="300dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="12dp"
         android:text="Date"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/favouriteFoodRating" />
+        app:layout_constraintStart_toEndOf="@+id/favouriteFoodRating"
+        app:layout_constraintTop_toBottomOf="@+id/favouriteFoodShop" />
 
     <TextView
         android:id="@+id/favouriteFoodPrice"
         android:layout_width="94dp"
         android:layout_height="25dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="144dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
         android:text="Price"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/favouriteFoodName" />
+        app:layout_constraintHorizontal_bias="0.972"
+        app:layout_constraintStart_toEndOf="@+id/favouriteFoodRating"
+        app:layout_constraintTop_toBottomOf="@+id/favouriteFoodDate" />
 
     <TextView
         android:id="@+id/favouriteFoodRating"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="174dp"
+        android:layout_height="39dp"
         android:text="Rating"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textColor="@color/colorFontBlack"
         android:textSize="30sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="308dp"
-        tools:layout_editor_absoluteY="4dp" />
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="69dp" />
 
 
 </android.support.constraint.ConstraintLayout>
