--- a/app/src/main/res/layout/add_fragment.xml
+++ b/app/src/main/res/layout/add_fragment.xml
@@ -34,7 +34,7 @@
         android:layout_marginBottom="8dp"
         android:paddingTop="10dp"
         android:text="@string/foodPriceLbl"
-        android:textAlignment="textEnd"
+        android:textAlignment="viewStart"
         android:textColor="@color/colorFontBlack"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,36 +45,16 @@
         app:layout_constraintVertical_bias="0.287" />
 
     <TextView
-        android:id="@+id/addDateTV"
-        android:layout_width="99dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:paddingTop="10dp"
-        android:text="@string/foodDate"
-        android:textAlignment="textEnd"
-        android:textColor="@color/colorFontBlack"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/addDateET"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.418" />
-
-    <TextView
         android:id="@+id/addShopTV"
         android:layout_width="99dp"
         android:layout_height="43dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:paddingTop="10dp"
         android:text="@string/foodShopLbl"
-        android:textAlignment="textEnd"
+        android:textAlignment="viewStart"
         android:textColor="@color/colorFontBlack"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -85,6 +65,26 @@
         app:layout_constraintVertical_bias="0.157" />
 
     <TextView
+        android:id="@+id/addDateTV"
+        android:layout_width="99dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:paddingTop="10dp"
+        android:text="@string/foodDateLbl"
+        android:textAlignment="viewStart"
+        android:textColor="@color/colorFontBlack"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/addDateET"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.418" />
+
+    <TextView
         android:id="@+id/addNameTV"
         android:layout_width="99dp"
         android:layout_height="43dp"
@@ -92,7 +92,7 @@
         android:layout_marginEnd="8dp"
         android:paddingTop="10dp"
         android:text="@string/foodNameLbl"
-        android:textAlignment="textEnd"
+        android:textAlignment="viewStart"
         android:textColor="@color/colorFontBlack"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/addShopTV"
@@ -145,11 +145,27 @@
         app:layout_constraintVertical_bias="0.169" />
 
 
+    <EditText
+        android:id="@+id/addDateET"
+        android:layout_width="189dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="8dp"
+        android:ems="10"
+        android:hint="Enter Date"
+        android:inputType="date"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.419" />
+
+
     <RatingBar
         android:id="@+id/addRatingBar"
         android:layout_width="242dp"
         android:layout_height="52dp"
-        android:layout_marginTop="156dp"
+        android:layout_marginTop="112dp"
         android:rating="1"
         android:stepSize="0.5"
         app:layout_constraintBottom_toTopOf="@+id/editfooter"
@@ -163,28 +179,16 @@
         android:id="@+id/addFoodButton"
         android:layout_width="80dp"
         android:layout_height="90dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/colorFontOffWhite"
         android:drawableTop="@drawable/ic_add_box_yellow_24dp"
         android:elevation="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/addfooter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addRatingBar" />
-
-    <EditText
-        android:id="@+id/addDateET"
-        android:layout_width="189dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="8dp"
-        android:ems="10"
-        android:hint="Enter Date"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.419" />
+        app:layout_constraintTop_toBottomOf="@+id/addDateET"
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
