--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -7,20 +7,7 @@
     android:layout_height="match_parent"
     tools:context="ie.food.fragments.EditFragment">
 
-    <EditText
-        android:id="@+id/editDateET"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginBottom="8dp"
-        android:ems="10"
-        android:hint="Enter Date"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.544" />
+
 
     <TextView
         android:id="@+id/editDateTV"
@@ -31,7 +18,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:paddingTop="10dp"
-        android:text="@string/foodDate"
+        android:text="@string/foodDateLbl"
         android:textAlignment="textEnd"
         android:textColor="@color/colorFontBlack"
         android:textSize="18sp"
@@ -173,6 +160,24 @@
         app:layout_constraintStart_toEndOf="@+id/editShopTV"
         app:layout_constraintTop_toBottomOf="@+id/editNameET"
         app:layout_constraintVertical_bias="0.444" />
+
+
+    <EditText
+        android:id="@+id/editDateET"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="8dp"
+        android:ems="10"
+        android:hint="Enter Date"
+        android:inputType="date"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.544" />
+
+
 
     <RatingBar
         android:id="@+id/editRatingBar"
