--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -20,6 +20,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_home"
-        app:menu="@menu/home_drawer" />
+        app:menu="@menu/home_drawer"
+        android:elevation="4dp"/>
 
 </android.support.v4.widget.DrawerLayout>
