--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_home"
-        android:icon="@drawable/home"
+        android:icon="@drawable/house"
         android:title="Home"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
@@ -37,6 +37,12 @@
         android:orderInCategory="100"
         app:showAsAction="never"
         android:onClick="menuProfile"/>
+
+    <item android:id="@+id/menu_image"
+        android:title="Image"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        android:onClick="menuImage"/>
 
     <item
         android:id="@+id/menuLogout"
