--- a/app/src/main/res/menu/menu_note.xml
+++ b/app/src/main/res/menu/menu_note.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_home"
-        android:icon="@drawable/home"
+        android:icon="@drawable/house"
         android:title="Home"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
