Layout of add restructuring started

--- a/app/src/main/res/layout/example_item.xml
+++ b/app/src/main/res/layout/example_item.xml
@@ -19,6 +19,12 @@ app:cardCornerRadius="8dp">
         android:src="@mipmap/ic_launcher" />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="An Idea For An Takeaway "
+        android:textSize="30sp"/>
+
+    <TextView
         android:id="@+id/text_view_creator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,6 +37,7 @@ app:cardCornerRadius="8dp">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Like: " />
+
 
 </LinearLayout>
 
