--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -13,23 +13,33 @@ tools:context="ie.food.idea.DetailActivity">
     android:layout_height="300dp"
     android:src="@mipmap/ic_launcher" />
 
+
 <TextView
     android:id="@+id/text_view_creator_detail"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginEnd="16dp"
     android:layout_marginStart="16dp"
-    android:text="Creator Name"
+    android:text="Image Uploaded by:"
     android:textColor="@android:color/black"
     android:textSize="40sp" />
 
-<TextView
-    android:id="@+id/text_view_like_detail"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginEnd="16dp"
-    android:layout_marginStart="16dp"
-    android:text="Likes: "
-    android:textSize="30sp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:text="How Popluar this item is "
+        android:textSize="30sp" />
+
+
+    <TextView
+        android:id="@+id/text_view_like_detail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Likes: "
+        android:textSize="25sp" />
 
 </LinearLayout>
